burger btn not showing on about page bug fixed. burger btn active state is now drived from sideBar state

--- a/src/components/burger-btn/burger-btn.styles.scss
+++ b/src/components/burger-btn/burger-btn.styles.scss
@@ -47,6 +47,7 @@ $hamburger-types: (elastic,
   position: absolute;
   top: 3%;
   right: 3%;
+  z-index: 1001;
 
   &:hover {
     @if $hamburger-hover-use-filter==true {
