--- a/src/pages/main/main.styles.scss
+++ b/src/pages/main/main.styles.scss
@@ -2,6 +2,7 @@
 
 .main-component {
   width: 80%;
+  position: relative;
 }
 
 @media (max-width: 768px) {
